Add login register API
